--- a/templates/jsdoc2/static/header.html
+++ b/templates/jsdoc2/static/header.html
@@ -1,24 +1,31 @@
 <%
-if(request.newdoc) {
-   javaStatic("ed.doc.Generate", "toDB", request.corejs);
-}
-else if(request.regen) {
-    var d = db.doc.find();
-    while(d.hasNext()) {
-        var cls = d.next();
-        javaStatic("ed.doc.Generate", "toHTML", tojson(cls._index));
-    }
-}
+
+core.util.doc();
+
+if(request.newdoc && request.js) Util.Doc.JSToDb(request.js);
+else if(request.newdoc && request.java) Util.Doc.JavadocToDb(request.java);
+else if(request.regen) Util.Doc.DbToHTML();
+
 %>
 
 <div id="header">
+
+<fieldset><legend>Sources</legend>
+Generate documentation from files or folders.
 <form>
-<fieldset><legend>Sources to include in doc</legend>
-<input type="checkbox" name="corejs" /> corejs <br />
-<input type="checkbox" name="ed" /> ed <br />
-<span style="color: red">Non-functional! --<input type="submit" name="newdoc" value="Doc to DB" />--</span>
+  <legend>Javascript path: </legend>
+  <input type="text" name="js" />
+  <input type="submit" name="newdoc" value="Generate" />
+</form>
+<form>
+  <legend>Java path: </legend>
+  <input type="text" name="java" />
+  <input type="submit" name="newdoc" value="Generate" />
+</form>
 </fieldset>
-<input type="submit" name="regen" value="HTML from DB" />
+
+<form>
+  <input type="submit" name="regen" value="HTML from DB" />
 </form>
 
 
