--- a/templates/jsdoc2/allclasses.tmpl
+++ b/templates/jsdoc2/allclasses.tmpl
@@ -1,17 +1,35 @@
-<div align="center">{+new Link().toFile("index.jxp").withText("Class Index")+}
-| {+new Link().toFile("files.jxp").withText("File Index")+}</div>
+<div align="center">{+new Link().toFile("index").withText("Class Index")+}
+| {+new Link().toFile("files").withText("File Index")+}</div>
 <hr />
 <h2>Classes</h2>
 <ul class="classList">
-	<for each="thisClass" in="data">
-	<li>{!
-		if (thisClass.alias == "_global_") {
-			output += "<i>"+new Link().toClass(thisClass.alias)+"</i>";
-		}
-		else {
-			output += new Link().toClass(thisClass.alias);
-		}
-	!}</li>
-	</for>
+   <li><i>JavaScript</i></li>
+        <%
+           var j = db.doc.src.js.find();
+           while(j.hasNext()) {
+               var jj = j.next();
+               %>
+               <li>
+                 <a href="<%= jj.filename.substring(jj.filename.lastIndexOf("/")+1, jj.filename.lastIndexOf(".")) %>" >
+                   <%= jj.filename.substring(jj.filename.lastIndexOf("/")+1, jj.filename.lastIndexOf(".")) %>
+                 </a>
+               </li>
+               <%
+           }
+        %>
+   <li><i>Java</i></li>
+        <%
+           j = db.doc.src.java.find();
+           while(j.hasNext()) {
+               var jj = j.next();
+               %>
+               <li>
+                 <a href="<%= jj.filename.substring(jj.filename.lastIndexOf("/")+1, jj.filename.lastIndexOf(".")) %>" >
+                   <%= jj.filename.substring(jj.filename.lastIndexOf("/")+1, jj.filename.lastIndexOf(".")) %>
+                 </a>
+               </li>
+               <%
+           }
+         %>
 </ul>
 <hr />
