--- a/templates/jsdoc2/allclasses.tmpl
+++ b/templates/jsdoc2/allclasses.tmpl
@@ -3,33 +3,15 @@
 <hr />
 <h2>Classes</h2>
 <ul class="classList">
-   <li><i>JavaScript</i></li>
-        <%
-           var j = db.doc.src.js.find();
-           while(j.hasNext()) {
-               var jj = j.next();
-               %>
-               <li>
-                 <a href="<%= jj.filename.substring(jj.filename.lastIndexOf("/")+1, jj.filename.lastIndexOf(".")) %>" >
-                   <%= jj.filename.substring(jj.filename.lastIndexOf("/")+1, jj.filename.lastIndexOf(".")) %>
-                 </a>
-               </li>
-               <%
-           }
-        %>
-   <li><i>Java</i></li>
-        <%
-           j = db.doc.src.java.find();
-           while(j.hasNext()) {
-               var jj = j.next();
-               %>
-               <li>
-                 <a href="<%= jj.filename.substring(jj.filename.lastIndexOf("/")+1, jj.filename.lastIndexOf(".")) %>" >
-                   <%= jj.filename.substring(jj.filename.lastIndexOf("/")+1, jj.filename.lastIndexOf(".")) %>
-                 </a>
-               </li>
-               <%
-           }
-         %>
+	<for each="thisClass" in="data">
+	<li>{!
+		if (thisClass.alias == "_global_") {
+			output += "<i>"+new Link().toClass(thisClass.alias)+"</i>";
+		}
+		else {
+			output += new Link().toClass(thisClass.alias);
+		}
+	!}</li>
+	</for>
 </ul>
 <hr />
