--- a/templates/jsdoc2/allclasses.tmpl
+++ b/templates/jsdoc2/allclasses.tmpl
@@ -1,17 +1,27 @@
-<div align="center">{+new Link().toFile("index").withText("Class Index")+}
-| {+new Link().toFile("files").withText("File Index")+}</div>
+<div align="center">{+new Link().toFile("index").withText("Class Index")+}</div>
 <hr />
 <h2>Classes</h2>
 <ul class="classList">
-	<for each="thisClass" in="data">
-	<li>{!
-		if (thisClass.alias == "_global_") {
-			output += "<i>"+new Link().toClass(thisClass.alias)+"</i>";
-		}
-		else {
-			output += new Link().toClass(thisClass.alias);
-		}
-	!}</li>
-	</for>
+  <%
+  var url = request.getURI();
+  url = url.substring(0, url.lastIndexOf("/"));
+
+var symbols = true;
+if(url.indexOf("symbols") > 0) {
+    symbols = false;
+}
+
+  core.core.file();
+
+  var dir = openFile(url+(symbols ? "/symbols" : ""));
+  if(dir.exists() && dir.isDirectory()) {
+      var f = dir.listFiles();
+      for(var i in f) {
+          %>
+          <li><a href="<%= url + (symbols ? "/symbols/" : "/") + f[i].filename %>"><%= f[i].filename.substring(0, f[i].filename.lastIndexOf(".")) %></a></li>
+          <%
+      }
+  }
+  %>
 </ul>
 <hr />
