"search" added (works terribly)

--- a/templates/jsdoc2/class.tmpl
+++ b/templates/jsdoc2/class.tmpl
@@ -186,7 +186,9 @@
 					<tbody>
 					<for each="member" in="ownMethods">
 						<tr>
-							<td class="attributes">{!
+							<td class="attributes">
+                                                          {+member.type+}
+                                                          {!
 								if (member.isPrivate) output += "&lt;private&gt; ";
 								if (member.isInner) output += "&lt;inner&gt; ";
 								if (member.isStatic) output += "&lt;static&gt; ";
