--- a/templates/jsdoc2/static/header.html
+++ b/templates/jsdoc2/static/header.html
@@ -1,5 +1,5 @@
 <div id="header">
-<form action="search" method="POST" />
+<form action="../search" method="POST" />
 <input type="text" name="search" /><input type="submit" value="Search" />
 </form>
 </div>
