Condensed template files and made publish.js more efficient

--- a/templates/jsdoc2/index.tmpl
+++ b/templates/jsdoc2/index.tmpl
@@ -6,10 +6,7 @@
 
 		<title>JsDoc Reference - Index</title>
 		<meta name="generator" content="JsDoc Toolkit" />
-
-		<style type="text/css">
-		{+include("static/default.css")+}
-		</style>
+<link rel="stylesheet" href="default.css" />
 	</head>
 
 	<body>
@@ -26,20 +23,15 @@
   var url = request.getURI();
   url = url.substring(0, url.lastIndexOf("/"));
 
-  var symbols = true;
-  if(url.indexOf("symbols") > 0) {
-      symbols = false;
-  }
-
   core.core.file();
 
-  var dir = openFile(url+(symbols ? "/symbols" : ""));
+  var dir = openFile(url);
   if(dir.exists() && dir.isDirectory()) {
       var f = dir.listFiles();
       for(var i in f) {
           %>
   <div>
-          <h2><a href="<%= url + (symbols ? "/symbols/" : "/") + f[i].filename %>"><%= f[i].filename.substring(0, f[i].filename.lastIndexOf(".")) %></a></h2>
+          <h2><a href="<%= f[i].filename %>"><%= f[i].filename.substring(0, f[i].filename.lastIndexOf(".")) %></a></h2>
 
 			</div>
 			<hr />
