--- a/templates/jsdoc2/class.tmpl
+++ b/templates/jsdoc2/class.tmpl
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><meta http-equiv="content-type" content="text/html; charset={+IO.encoding+}" />
 <meta name="generator" content="JsDoc Toolkit" />{! Link.base = "../"; /* all generated links will be relative to this */ !}<title>JsDoc Reference - {+data.alias+}</title>
-<link rel="stylesheet" href="default.css" />
+<link rel="stylesheet" href="assets/default.css" />
 </head>
 <body>
 <!-- ============================== header ================================= -->
