--- a/templates/jsdoc2/search.tmpl
+++ b/templates/jsdoc2/search.tmpl
@@ -22,17 +22,16 @@
 		<div id="content">
                   <h1>Search</h1>
                   <%
-                     var cursor = db.doc.find({"name": request.search});
+                     var q = new RegExp(request.search, "i");
+                     var cursor = db.doc.find({"name": q});
                      %>
                   <h2><%= cursor.count() %> Results</h2>
                      <%
                      while(cursor.hasNext()) {
                          var obj = cursor.next();
-                         for(var i in obj.name) {
                              %>
-                             <div class="searchresult"><a href="<%= obj.name[i] %>"><%= obj.name[i] %></a></div>
+                             <div class="searchresult"><a href="<%= obj.name %>"><%= obj.name %></a></div>
                              <%
-                         }
                      }
                   %>
 
