--- a/templates/jsdoc2/class.tmpl
+++ b/templates/jsdoc2/class.tmpl
@@ -95,6 +95,55 @@ else {
   </div>
 </if>
 <if test="ownProperties && ownProperties.length"><!-- ============================== field details ========================== --><div class="sectionTitle">Field Detail</div><for each="member" in="ownProperties"><a name="{+Link.symbolNameToLinkName(member)+}"> </a><div class="fixedFont">{! if (member.isPrivate) output += "&lt;private&gt; "; if (member.isInner) output += "&lt;inner&gt; "; if (member.isStatic) output += "&lt;static&gt; "; if (member.isConstant) output += "&lt;constant&gt; "; !} <if test="member.type"><span class="light">{{+new Link().toSymbol(member.type)+}}</span></if><if test="member.isStatic && member.memberOf != '_global_'"><span class="light">{+member.memberOf+}.</span></if><b>{+member.name || member._name+}</b></div><div class="description">{+resolveLinks(member.desc)+}<if test="member.srcFile != data.srcFile"><br /><i>Defined in: </i> {+new Link().toSrc(member.srcFile)+}.</if><if test="member.author"><br /><i>Author: </i>{+member.author+}.</if></div><if test="member.example && member.example.length"><for each="example" in="member.example"><pre class="code">{+example+}</pre></for></if><if test="member.deprecated"><dl class="detailList"><dt class="heading">Deprecated:</dt><dt>{+ member.deprecated +}</dt></dl></if><if test="member.since"><dl class="detailList"><dt class="heading">Since:</dt><dd>{+ member.since +}</dd></dl></if><if test="member.see && member.see.length"><dl class="detailList"><dt class="heading">See:</dt><for each="item" in="member.see"><dd>{+ new Link().toSymbol(item) +}</dd></for></dl></if><if test="member.defaultValue"><dl class="detailList"><dt class="heading">Default Value:</dt><dd>{+resolveLinks(member.defaultValue)+}</dd></dl></if><if test="!$member_last"><hr /></if></for></if>
-<if test="ownMethods && ownMethods.length"><!-- ============================== method details ========================= --><div class="sectionTitle">Method Detail</div><for each="member" in="ownMethods"><a name="{+Link.symbolNameToLinkName(member)+}"> </a><div class="fixedFont">{! if (member.isPrivate) output += "&lt;private&gt; "; if (member.isInner) output += "&lt;inner&gt; "; if (member.isStatic) output += "&lt;static&gt; "; !} <if test="member.type"><span class="light">{{+new Link().toSymbol(member.type)+}}</span></if><if test="member.isStatic && member.memberOf != '_global_'"><span class="light">{+member.memberOf+}.</span></if><b>{+member.name || member._name+}</b>{+makeSignature(member.params || member._params)+}</div><div class="description">{+resolveLinks(member.desc)+}<if test="member.srcFile != data.srcFile"><br /><i>Defined in: </i> {+new Link().toSrc(member.srcFile)+}.</if><if test="member.author"><br /><i>Author: </i>{+member.author+}.</if></div><if test="member.example && member.example.length"><for each="example" in="member.example"><pre class="code">{+example+}</pre></for></if><if test="defined(member._params) && member._params.length"><dl class="detailList"><dt class="heading">Parameters:</dt><for each="item" in="member._params"><dt>{+((item.type)?"<span class=\"light fixedFont\">{"+(new Link().toSymbol(item.type))+"}</span> " : "")+}<b>{+item.name || item._name+}</b><if test="item.isOptional"><i>Optional<if test="item.defaultValue">, Default: {+item.defaultValue+}</if></i></if></dt><dd>{+resolveLinks(item.desc)+}</dd></for></dl></if><if test="member.deprecated"><dl class="detailList"><dt class="heading">Deprecated:</dt><dt>{+member.deprecated+}</dt></dl></if><if test="member.since"><dl class="detailList"><dt class="heading">Since:</dt><dd>{+ member.since +}</dd></dl></if><if test="member.exceptions.length"><dl class="detailList"><dt class="heading">Throws:</dt><for each="item" in="member.exceptions"><dt>{+((item.type)?"<span class=\"light fixedFont\">{"+(new Link().toSymbol(item.type))+"}</span> " : "")+} <b>{+item.name+}</b></dt><dd>{+resolveLinks(item.desc)+}</dd></for></dl></if><if test="member.returns.length"><dl class="detailList"><dt class="heading">Returns:</dt><for each="item" in="member.returns"><dd>{+((item.type)?"<span class=\"light fixedFont\">{"+(new Link().toSymbol(item.type))+"}</span> " : "")+}{+resolveLinks(item.desc)+}</dd></for></dl></if><if test="member.requires.length"><dl class="detailList"><dt class="heading">Requires:</dt><for each="item" in="member.requires"><dd>{+ resolveLinks(item) +}</dd></for></dl></if><if test="member.see && member.see.length"><dl class="detailList"><dt class="heading">See:</dt><for each="item" in="member.see"><dd>{+ new Link().toSymbol(item) +}</dd></for></dl></if><if test="!$member_last"><hr /></if></for></if><hr />
+<if test="ownMethods && ownMethods.length">
+  <!-- ============================== method details ========================= -->
+  <div class="sectionTitle">Method Detail</div>
+  <for each="member" in="ownMethods">
+    <a name="{+Link.symbolNameToLinkName(member)+}"> </a>
+    <div class="fixedFont">{! if (member.isPrivate) output += "&lt;private&gt; "; if (member.isInner) output += "&lt;inner&gt; "; if (member.isStatic) output += "&lt;static&gt; "; !}
+      <if test="member.type"><span class="light">{{+new Link().toSymbol(member.type)+}}</span></if>
+      <if test="member.isStatic && member.memberOf != '_global_'"><span class="light">{+member.memberOf+}.</span></if>
+      <b>{+member.name || member._name+}</b>{+makeSignature(member.params || member._params)+}
+    </div>
+    <div class="description">{+resolveLinks(member.desc)+}
+      <if test="member.srcFile != data.srcFile"><br /><i>Defined in: </i> {+new Link().toSrc(member.srcFile)+}.</if>
+      <if test="member.author"><br /><i>Author: </i>{+member.author+}.</if>
+    </div>
+    <if test="member.example && member.example.length">
+      <for each="example" in="member.example">
+        <pre class="code">{+example.desc+}</pre>
+      </for>
+    </if>
+    <if test="defined(member._params) && member._params.length">
+      <dl class="detailList"><dt class="heading">Parameters:</dt>
+        <for each="item" in="member._params">
+          <dt>{+((item.type)?"<span class=\"light fixedFont\">{"+(new Link().toSymbol(item.type))+"}</span> " : "")+}<b>{+item.name || item._name+}</b>
+            <if test="item.isOptional"><i>Optional<if test="item.defaultValue">, Default: {+item.defaultValue+}</if></i></if>
+          </dt>
+          <dd>{+resolveLinks(item.desc)+}</dd>
+        </for>
+      </dl>
+    </if>
+    <if test="member.deprecated"><dl class="detailList"><dt class="heading">Deprecated:</dt><dt>{+member.deprecated+}</dt></dl></if>
+    <if test="member.since"><dl class="detailList"><dt class="heading">Since:</dt><dd>{+ member.since +}</dd></dl></if>
+    <if test="member.exceptions.length">
+      <dl class="detailList"><dt class="heading">Throws:</dt>
+        <for each="item" in="member.exceptions">
+          <dt>{+((item.type)?"<span class=\"light fixedFont\">{"+(new Link().toSymbol(item.type))+"}</span> " : "")+} <b>{+item.name+}</b></dt>
+          <dd>{+resolveLinks(item.desc)+}</dd>
+        </for>
+      </dl>
+    </if>
+    <if test="member.returns.length">
+      <dl class="detailList"><dt class="heading">Returns:</dt>
+        <for each="item" in="member.returns"><dd>{+((item.type)?"<span class=\"light fixedFont\">{"+(new Link().toSymbol(item.type))+"}</span> " : "")+}{+resolveLinks(item.desc)+}</dd></for>
+      </dl>
+    </if>
+    <if test="member.requires.length"><dl class="detailList"><dt class="heading">Requires:</dt><for each="item" in="member.requires"><dd>{+ resolveLinks(item) +}</dd></for></dl></if>
+    <if test="member.see && member.see.length"><dl class="detailList"><dt class="heading">See:</dt><for each="item" in="member.see"><dd>{+ new Link().toSymbol(item) +}</dd></for></dl></if>
+    <if test="!$member_last"><hr /></if>
+  </for>
+</if>
+<hr />
 <!--</div>-->
 <if test="defined(ownAnon) && ownAnon.length"><!-- ============================== anonymous inner classes details ========================= --><div class="sectionTitle">Anonymous Inner Classes Detail</div><for each="member" in="ownAnon"><a name="{+Link.symbolNameToLinkName(member)+}"> </a><div class="fixedFont"><if test="member.type"><span class="light">{{+new Link().toSymbol(member.type)+}}</span></if><if test="member.isStatic && member.memberOf != '_global_'"><span class="light">{+member.memberOf+}.</span></if><b>{+member.name || member._name+}</b>{+makeSignature(member.params || member._params)+}</div><div class="description">{+resolveLinks(member.desc)+}<if test="member.srcFile != data.srcFile"><br /><i>Defined in: </i> {+new Link().toSrc(member.srcFile)+}.</if><if test="member.author"><br /><i>Author: </i>{+member.author+}.</if></div><if test="member.example && member.example.length"><for each="example" in="member.example"><pre class="code">{+example+}</pre></for></if><if test="defined(member._params) && member._params.length"><dl class="detailList"><dt class="heading">Parameters:</dt><for each="item" in="member._params"><dt><b>{+item+}</b></dt></for></dl></if><if test="member.deprecated"><dl class="detailList"><dt class="heading">Deprecated:</dt><dt>{+member.deprecated+}</dt></dl></if><if test="member.since"><dl class="detailList"><dt class="heading">Since:</dt><dd>{+ member.since +}</dd></dl></if><if test="member.exceptions && member.exceptions.length"><dl class="detailList"><dt class="heading">Throws:</dt><for each="item" in="member.exceptions"><dt>{+((item.type)?"<span class=\"light fixedFont\">{"+(new Link().toSymbol(item.type))+"}</span> " : "")+} <b>{+item.name+}</b></dt><dd>{+resolveLinks(item.desc)+}</dd></for></dl></if><if test="member.returns"><dl class="detailList"><dt class="heading">Returns:</dt><dd>{+resolveLinks(member.returns)+}</dd></dl></if><if test="member.requires && member.requires.length"><dl class="detailList"><dt class="heading">Requires:</dt><for each="item" in="member.requires"><dd>{+ resolveLinks(item) +}</dd></for></dl></if><if test="member.see && member.see.length"><dl class="detailList"><dt class="heading">See:</dt><for each="item" in="member.see"><dd>{+ new Link().toSymbol(item) +}</dd></for></dl></if><if test="!$member_last"><hr /></if></for></if><hr /></div>
