--- a/templates/jsdoc2/class.tmpl
+++ b/templates/jsdoc2/class.tmpl
@@ -35,7 +35,7 @@ else {
   <if test="data.augments.length">
     <br />Extends {+data.augments.sort().map(function($) { return new Link().toSymbol($); }).join(", ")+}.<br />
   </if>
-  {+resolveLinks(data.classDesc)+}
+  {# resolveLinks(data.classDesc) #}
   <if test="!data.isBuiltin() && data.srcFile">{# isn't defined in any file #}<br /><i>Defined in: </i> {+new Link().toSrc(data.srcFile)+}.</if>
 </p>
 <!-- ============================== constructor summary ==================== -->
