--- a/templates/jsdoc2/class.tmpl
+++ b/templates/jsdoc2/class.tmpl
@@ -145,7 +145,7 @@ else {
     </for>
   </div>
 </if>
-<if test="ownProperties && ownProperties.length"><!-- ============================== field details ========================== --><div class="sectionTitle">Field Detail</div><for each="member" in="ownProperties"><a name="{+Link.symbolNameToLinkName(member)+}"> </a><div class="fixedFont">{! if (member.isPrivate) output += "&lt;private&gt; "; if (member.isInner) output += "&lt;inner&gt; "; if (member.isStatic) output += "&lt;static&gt; "; if (member.isConstant) output += "&lt;constant&gt; "; !} <if test="member.type"><span class="light">{{+new Link().toSymbol(member.type)+}}</span></if><if test="member.isStatic && member.memberOf != '_global_'"><span class="light">{+member.memberOf+}.</span></if><b>{+member.name || member._name+}</b></div><div class="description">{+resolveLinks(member.desc)+}<if test="member.srcFile != data.srcFile"><br /><i>Defined in: </i> {+new Link().toSrc(member.srcFile)+}.</if><if test="member.author"><br /><i>Author: </i>{+member.author+}.</if></div><if test="member.example && member.example.length"><for each="example" in="member.example"><pre class="code">{+example+}</pre></for></if><if test="member.deprecated"><dl class="detailList"><dt class="heading">Deprecated:</dt><dt>{+ member.deprecated +}</dt></dl></if><if test="member.since"><dl class="detailList"><dt class="heading">Since:</dt><dd>{+ member.since +}</dd></dl></if><if test="member.see && member.see.length"><dl class="detailList"><dt class="heading">See:</dt><for each="item" in="member.see"><dd>{+ new Link().toSymbol(item) +}</dd></for></dl></if><if test="member.defaultValue"><dl class="detailList"><dt class="heading">Default Value:</dt><dd>{+resolveLinks(member.defaultValue)+}</dd></dl></if><if test="!$member_last"><hr /></if></for></if>
+<if test="ownProperties && ownProperties.length"><!-- ============================== field details ========================== --><div class="sectionTitle">Field Detail</div><for each="member" in="ownProperties"><a name="{+Link.symbolNameToLinkName(member)+}"> </a><div class="fixedFont">{! if (member.isPrivate) output += "&lt;private&gt; "; if (member.isInner) output += "&lt;inner&gt; "; if (member.isStatic) output += "&lt;static&gt; "; if (member.isConstant) output += "&lt;constant&gt; "; !} <if test="member.type"><span class="light">{{+new Link().toSymbol(member.type)+}}</span></if><if test="member.isStatic && member.memberOf != '_global_'"><span class="light">{+member.memberOf+}.</span></if><b>{+member.name || member._name+}</b></div><div class="description">{+resolveLinks(member.desc)+}<if test="member.srcFile != data.srcFile"><br /><i>Defined in: </i> {+makeSrcLink(member.srcFile)+}.</if><if test="member.author"><br /><i>Author: </i>{+member.author+}.</if></div><if test="member.example && member.example.length"><for each="example" in="member.example"><pre class="code">{+example+}</pre></for></if><if test="member.deprecated"><dl class="detailList"><dt class="heading">Deprecated:</dt><dt>{+ member.deprecated +}</dt></dl></if><if test="member.since"><dl class="detailList"><dt class="heading">Since:</dt><dd>{+ member.since +}</dd></dl></if><if test="member.see && member.see.length"><dl class="detailList"><dt class="heading">See:</dt><for each="item" in="member.see"><dd>{+ new Link().toSymbol(item) +}</dd></for></dl></if><if test="member.defaultValue"><dl class="detailList"><dt class="heading">Default Value:</dt><dd>{+resolveLinks(member.defaultValue)+}</dd></dl></if><if test="!$member_last"><hr /></if></for></if>
 <if test="ownMethods && ownMethods.length">
   <!-- ============================== method details ========================= -->
   <div class="sectionTitle">Method Detail</div>
@@ -156,7 +156,7 @@ else {
       <if test="member.isStatic && member.memberOf != '_global_'"><span class="light">{+member.memberOf+}.</span></if><b>{+member.name || member._name+}</b>{+makeSignature(member.params || member._params)+}
     </div>
     <div class="description">{+resolveLinks(member.desc)+}
-      <if test="member.srcFile != data.srcFile"><br /><i>Defined in: </i> {+new Link().toSrc(member.srcFile)+}.</if>
+      <if test="member.srcFile != data.srcFile"><br /><i>Defined in: </i> {+makeSrcLink(member.srcFile)+}.</if>
       <if test="member.author"><br /><i>Author: </i>{+member.author+}.</if>
     </div>
     <if test="member.example && member.example.length">
@@ -202,7 +202,7 @@ else {
     <div class="fixedFont"><if test="member.type"><span class="light">{{+new Link().toSymbol(member.type)+}}</span></if>
       <if test="member.isStatic && member.memberOf != '_global_'"><span class="light">{+member.memberOf+}.</span></if><b>{+member.name || member._name+}</b>{+makeSignature(member.params || member._params)+}
     </div>
-    <div class="description">{+resolveLinks(member.desc)+}<if test="member.srcFile != data.srcFile"><br /><i>Defined in: </i> {+new Link().toSrc(member.srcFile)+}.</if>
+    <div class="description">{+resolveLinks(member.desc)+}<if test="member.srcFile != data.srcFile"><br /><i>Defined in: </i> {+makeSrcLink(member.srcFile)+}.</if>
       <if test="member.author"><br /><i>Author: </i>{+member.author+}.</if>
     </div>
     <if test="member.example && member.example.length"><for each="example" in="member.example"><pre class="code">{+example+}</pre></for></if>
